[gd_scene load_steps=4 format=3 uid="uid://dsog2jabqbtg1"]

[ext_resource type="Script" path="res://src/Menu.gd" id="1_hfwmb"]
[ext_resource type="Texture2D" uid="uid://exr6x6gj2ar5" path="res://assets/bgpic.png" id="2_4t5or"]
[ext_resource type="Theme" uid="uid://b1r5v23do41bb" path="res://assets/buttonsMenu.tres" id="3_54m2x"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hfwmb")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 650.0
texture = ExtResource("2_4t5or")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 935.0
offset_top = 369.0
offset_right = 1038.0
offset_bottom = 505.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_54m2x")
text = "Play"
expand_icon = true

[node name="Instructions" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_54m2x")
text = "How To Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_54m2x")
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_54m2x")
text = "Quit
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Instructions" to="." method="_on_instructions_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
